--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -16,8 +16,12 @@
     "@mui/material": "^5.13.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.0",
+    "chartjs-plugin-datalabels": "^2.0.0",
+    "faker": "^5.5.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "styled-components": "^5.3.11"
