--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -14,15 +14,19 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
+    "@mui/x-data-grid": "^6.6.0",
+    "@mui/x-data-grid-generator": "^6.6.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "chart.js": "^4.3.0",
     "chartjs-plugin-datalabels": "^2.0.0",
+    "d3": "^7.3.0",
     "faker": "^5.5.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.11.2",
     "styled-components": "^5.3.11"
   },
