--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -31,6 +31,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
