changes env file

--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,4 @@ SERVER_PORT=8000
 DEBUG_MODE=true
 DB_URL=mongodb://localhost:27017/e-commerce
 JWT_SECRET=thisisdipak
-REFRESH_SECRET=thisismyrefreshsecret
+REFRESH_SECRET=kOlj0e9u@$420roj
