--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.0-rc.3",
     "swiper": "^9.4.1"
   },
