--- a/client/package.json
+++ b/client/package.json
@@ -18,9 +18,11 @@
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-chatbot-kit": "^2.1.2",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.13.0",
+    "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.0-rc.3",
