google signup added

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 SERVER_PORT=8000
 DEBUG_MODE=true
 DB_URL=mongodb://localhost:27017/e-commerce
-JWT_SECRET=thisisdipak
+JWT_SECRET=$2B$10$OIE7b
 REFRESH_SECRET=kOlj0e9u@$420roj
 GOOGLE_CLIENT_ID=888855487617-udenn7q62opllddd83be8oma161ctrob.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
