--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-chatbot-kit": "^2.1.2",
